css update. problem solved. the issues was left side clipped when the content is too big

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 .App {
-  text-align: center;
+
 }
 
 .App-header {
@@ -16,7 +16,6 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-top: 60px; /* 네비게이션 바 높이만큼 패딩 추가 */
 }
 
